--- a/05/css/style.css
+++ b/05/css/style.css
@@ -75,7 +75,6 @@ main { margin-top: 10px;}
 
 
 .sc-box2 {
-    height: 50px;
     background: #f00;
     margin-top: 10px;
     padding: 10px;
@@ -83,9 +82,8 @@ main { margin-top: 10px;}
     overflow: hidden;
 }
 .sc-box2 p {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    float: left;
+    line-height: 50px;
 }
 .sc-box2 .navi {
     float: right;
@@ -97,7 +95,7 @@ main { margin-top: 10px;}
     width: 50px; height: 50px;
     background: #fff;
     border: 1px solid #000;
-    padding: 10px;
+    float: left;
 }
 .sc-box2 .navi .btn.prev {}
 .sc-box2 .navi .btn.next {}
